orchestrator-butlerhat/api/data_types/manifests/chrome_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome-1 # Unique per instance
spec:
  selector:
    matchLabels:
      app: chrome-1 # Must match service labels
  replicas: 1
  template:
    metadata:
      labels:
        app: chrome-1
    spec:
      # securityContext:
      #   seccompProfile:
      #     type: Localhost
      #     localhostProfile: "profiles/seccomp_profile.json"
      #   runAsUser: 1000 # Assuming pwuser corresponds to UID 1001
      hostIPC: true
      containers:
      - name: chrome-playwright-container
        image: playwright-chrome
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - SYS_ADMIN
        volumeMounts:
        - name: dev-shm
          mountPath: /dev/shm
        ports:
        - name: playwright
          containerPort: 4445 # playwright port
        - name: novnc
          containerPort: 6080 # noVNC port
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
      volumes:
      - name: dev-shm
        emptyDir:
          medium: Memory
