orchestrator-butlerhat/api/data_types/manifests/chrome_service.yml

apiVersion: v1
kind: Service
metadata:
  name: service-chrome-1 # Unique per instance
spec:
  type: NodePort
  selector:
    app: chrome-1 # Must match deployment labels
  ports:
  - name: novnc # Name for the playwright port
    protocol: TCP
    port: 6080
    targetPort: 6080
  - name: playwright # Name for the playwright port
    protocol: TCP
    port: 4445
    targetPort: 4445
